--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
             font-weight: bold;
             margin-right: 10px;
         }
+        .images {
+            text-align: center;
+            margin-top: 40px;
+        }
+        .images img {
+            margin: 10px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -174,6 +183,12 @@
                 <p>Choreografia: Gosia Lubieniecka</p>
                 <p>Muzyka: collage</p>
             </div>
+        </div>
+
+        <div class="images">
+            <img src="jaguzz.png" alt="Image 1" width="181" height="181">
+            <img src="studio.jpg" alt="Image 2" width="214" height="214">
+            <img src="flex.jpg" alt="Image 3" width="123" height="121">
         </div>
     </div>
 </body>
