--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Plan Koncertu Widzowie</title>
+    <title>Plan Koncertu</title>
+    <link rel="icon" href="data/jaguzz.png" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-        
+
         body {
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
@@ -20,7 +21,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
+            max-width: 1000px;
             margin: 20px auto;
         }
 
@@ -39,6 +40,15 @@
             font-style: italic;
             color: #666;
             margin-top: 10px;
+        }
+
+        .header-image {
+            display: block;
+            max-width: 800px;
+            height: auto;
+            border-radius: 8px;
+            margin: 0 auto 40px auto; /* Centers the image */
+
         }
 
         .performance {
@@ -74,152 +84,159 @@
         .break {
             text-align: center;
             font-style: italic;
-            margin: 20px 0;
+            padding: 20px 0 40px 0;
             font-size: 1.2em;
             color: #444;
+            border-bottom: 1px solid #ddd;
         }
 
         .images {
-            text-align: center;
+            display: flex;
+            justify-content: center;
             margin-top: 40px;
         }
 
         .images img {
-            margin: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: auto;
-            max-width: 100%;
-            height: auto;
+            margin: 50px;
+            width: 130px;
+            height: 130px;
+            object-fit: cover; /* Ensures the image covers the area without distortion */
         }
 
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h1>Spektakl taneczny „PODRÓŻ”</h1>
-            <p>„Nie to skąd przychodzimy ani dokąd podążamy ale sama droga którą przebywamy liczy się w życiu najbardziej.”</p>
-        </div>
+<div class="container">
+    <img src="data/header.png" alt="Header Image" class="header-image">
 
-        <div class="performance">
-            <span class="number">1.</span><span class="performance-title">„Jak z obrazu Degas”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa C</p>
-                <p>Choreografia: Luiza Żymełka</p>
-                <p>Muzyka: do lekcji baletu klasycznego</p>
-            </div>
-        </div>
+    <div class="header">
+        <h1>Program</h1>
+    </div>
 
-        <div class="performance">
-            <span class="number">2.</span><span class="performance-title">„Czułość”</span>
-            <div class="details">
-                <p>Wykonanie: JaGUzz</p>
-                <p>Choreografia: Gosia Lubieniecka</p>
-                <p>Muzyka: collage</p>
-                <p>Tekst: Olga Tokarczuk czyta Wojciech Leonowicz</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">3.</span><span class="performance-title">“Przebudzenie”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa dorośli neoklasyka</p>
-                <p>Choreografia: Ana Kipshidze</p>
-                <p>Muzyka: Ólafur Arnalds</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">4.</span><span class="performance-title">“La Valse”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa A</p>
-                <p>Choreografia: Tina Charczenko</p>
-                <p>Muzyka: Maurice Ravel</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">5.</span><span class="performance-title">“Ekstaza”</span>
-            <div class="details">
-                <p>Wykonanie: JaGUzz</p>
-                <p>Choreografia: Gosia Lubieniecka</p>
-                <p>Muzyka: Dominique Fils-Aime</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">6.</span><span class="performance-title">Pokazowa lekcja baletu grupy dorosłej</span>
-            <div class="details">
-                <p>Choreografia: Elżbieta Ziętkiewicz</p>
-                <p>Muzyka: Sting</p>
-            </div>
-        </div>
-
-        <p class="break">PRZERWA 15’</p>
-
-        <div class="performance">
-            <span class="number">7.</span><span class="performance-title">“Flashbacki”</span>
-            <div class="details">
-                <p>Wykonanie: JaGUzz</p>
-                <p>Choreografia: Urszula Skośkiewicz</p>
-                <p>Muzyka: Lipka</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">8.</span><span class="performance-title">“Błękitna fala”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa C</p>
-                <p>Choreografia: Luiza Żymełka</p>
-                <p>Muzyka: Ludovico Einaudi</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">9.</span><span class="performance-title">“Carmen”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa dorosła</p>
-                <p>Choreografia: Kamila Borowska</p>
-                <p>Muzyka: Georges Bizet</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">10.</span><span class="performance-title">“Historia przesyłki”</span>
-            <div class="details">
-                <p>Wykonanie: JaGUzz</p>
-                <p>Choreografia: Urszula Skośkiewicz</p>
-                <p>Muzyka: Paris Paloma</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">11.</span><span class="performance-title">„Zmysłowy krok”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa B</p>
-                <p>Choreografia: Tina Charczenko</p>
-                <p>Muzyka: Alfred Schnittke</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">12.</span><span class="performance-title">„Jak motyle”</span>
-            <div class="details">
-                <p>Wykonanie: Grupa A</p>
-                <p>Choreografia: Elżbieta Ziętkiewicz</p>
-                <p>Muzyka: Eugen Doga</p>
-            </div>
-        </div>
-
-        <div class="performance">
-            <span class="number">13.</span><span class="performance-title">“Moja Podróż”</span>
-            <div class="details">
-                <p>Wykonanie: JaGUzz</p>
-                <p>Choreografia: Gosia Lubieniecka</p>
-                <p>Muzyka: collage</p>
-            </div>
+    <div class="performance">
+        <span class="number">1.</span><span class="performance-title">„Jak z obrazu Degas”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa C</p>
+            <p>Choreografia: Luiza Żymełka</p>
+            <p>Muzyka: do lekcji baletu klasycznego</p>
         </div>
     </div>
+
+    <div class="performance">
+        <span class="number">2.</span><span class="performance-title">„Czułość”</span>
+        <div class="details">
+            <p>Wykonanie: JaGUzz</p>
+            <p>Choreografia: Gosia Lubieniecka</p>
+            <p>Muzyka: collage</p>
+            <p>Tekst: Olga Tokarczuk czyta Wojciech Leonowicz</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">3.</span><span class="performance-title">“Przebudzenie”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa dorośli neoklasyka</p>
+            <p>Choreografia: Ana Kipshidze</p>
+            <p>Muzyka: Ólafur Arnalds</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">4.</span><span class="performance-title">“La Valse”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa A</p>
+            <p>Choreografia: Tina Charczenko</p>
+            <p>Muzyka: Maurice Ravel</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">5.</span><span class="performance-title">“Ekstaza”</span>
+        <div class="details">
+            <p>Wykonanie: JaGUzz</p>
+            <p>Choreografia: Gosia Lubieniecka</p>
+            <p>Muzyka: Dominique Fils-Aime</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">6.</span><span class="performance-title">Pokazowa lekcja baletu grupy dorosłej</span>
+        <div class="details">
+            <p>Choreografia: Elżbieta Ziętkiewicz</p>
+            <p>Muzyka: Sting</p>
+        </div>
+    </div>
+
+    <p class="break">PRZERWA 15’</p>
+
+    <div class="performance">
+        <span class="number">7.</span><span class="performance-title">“Flashbacki”</span>
+        <div class="details">
+            <p>Wykonanie: JaGUzz</p>
+            <p>Choreografia: Urszula Skośkiewicz</p>
+            <p>Muzyka: Lipka</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">8.</span><span class="performance-title">“Błękitna fala”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa C</p>
+            <p>Choreografia: Luiza Żymełka</p>
+            <p>Muzyka: Ludovico Einaudi</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">9.</span><span class="performance-title">“Carmen”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa dorosła</p>
+            <p>Choreografia: Kamila Borowska</p>
+            <p>Muzyka: Georges Bizet</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">10.</span><span class="performance-title">“Historia przesyłki”</span>
+        <div class="details">
+            <p>Wykonanie: JaGUzz</p>
+            <p>Choreografia: Urszula Skośkiewicz</p>
+            <p>Muzyka: Paris Paloma</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">11.</span><span class="performance-title">„Zmysłowy krok”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa B</p>
+            <p>Choreografia: Tina Charczenko</p>
+            <p>Muzyka: Alfred Schnittke</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">12.</span><span class="performance-title">„Jak motyle”</span>
+        <div class="details">
+            <p>Wykonanie: Grupa A</p>
+            <p>Choreografia: Elżbieta Ziętkiewicz</p>
+            <p>Muzyka: Eugen Doga</p>
+        </div>
+    </div>
+
+    <div class="performance">
+        <span class="number">13.</span><span class="performance-title">“Moja Podróż”</span>
+        <div class="details">
+            <p>Wykonanie: JaGUzz</p>
+            <p>Choreografia: Gosia Lubieniecka</p>
+            <p>Muzyka: collage</p>
+        </div>
+    </div>
+
+    <div class="images">
+        <img src="data/jaguzz.png" alt="Image 1">
+        <img src="data/studio.jpg" alt="Image 2">
+        <img src="data/flex.jpg" alt="Image 3">
+    </div>
+</div>
 </body>
 </html>
